# jupyter.nvim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  echo.py  experiments.cpp  gen_api.py  test.lua
include/: api.hpp  executor.hpp  geometry.hpp  graphics.hpp  image.hpp  kitty.hpp  nvim.hpp  nvim_graphics.hpp  nvim_rpc.hpp  printer.hpp  rpc.hpp  socket.hpp  window.hpp
src/: api.cpp  api.t.cpp  asocket.cpp  coro.cpp  graphics.cpp  image.cpp  kitty.cpp  kitty.hpp  main.cpp  msgpack.cpp  nvim.cpp  nvim_graphics.cpp  rpc.cpp  rpc.hpp  socket.cpp  std.cpp  tracker.cpp  window.cpp  window.hpp
src/handlers/: images.cpp  images.hpp  markdown.cpp  markdown.hpp
templates/: nvim.hpp
